--- a/website_2/jakes_.css
+++ b/website_2/jakes_.css
@@ -16,6 +16,7 @@ body{
   float:left;
   margin-bottom:10px;
   margin-right:350px;
+  border-radius:5px;
   
 }
 
@@ -43,12 +44,13 @@ hr {
 
 .about{
   float:left;
+  position:relative;
   text-align:center;
   width:45%;
-  height:300px;
+  height:350px;
   padding: 0 30px 0 30px;
-  font-weight:Bold;
-  font-size:25px;
+  font-weight:600;
+  font-size:30px;
 }
 .about h1{
   font-size: 50px;
@@ -62,7 +64,8 @@ hr {
    border-left:solid black;
  }
  
-#hours ul {
+#hours ul li {
   list-style-type:none;
+  font-size:30px;
   
 }
