okay maybe i needed a little work

--- a/website_2/jakes_.css
+++ b/website_2/jakes_.css
@@ -48,7 +48,7 @@ hr {
   text-align:center;
   width:45%;
   height:350px;
-  padding: 0 30px 0 30px;
+  padding-right:35px;
   font-weight:600;
   font-size:30px;
 }
