--- a/website_1/my_website.css
+++ b/website_1/my_website.css
@@ -9,7 +9,7 @@
 
 .table_cell{
   padding:20px 0px 20px 0px;
-  width:33%;
+  width:33.07%;
   border:1.7px solid;
   border-color:blue;
   float:left;
@@ -19,10 +19,9 @@
 .second-table {
   float:center;
   text-align:center;
-  margin:150px 100px 50px 100px;
-  padding-top:0;
-  padding-right:0;
+  margin:150px 100% 50px 6%;
   background-color:lightgray;
+  width:85%;
 }
 
 .lists h1{
